--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "node --watch index.js"
+    "dev": "node --watch src/index.js"
   },
   "keywords": [],
   "author": "",
